# adiboupk

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  install.ps1  install.sh  mkdocs.yml  setup.sh  update.sh
.github/workflows/: build.yml
demo/: demo.sh
demo/Enrichments/: virustotal_lookup.py
demo/Responses/: send_alert.py
demo/conflict_test/: adiboupk.json  requirements.txt  test_imports.py
docs/: commands.md  concepts.md  configuration.md  index.md  installation.md  isolation.md  tutorial.md
docs/assets/: extra.css
docs/overrides/partials/: footer.html
include/adiboupk/: auditor.hpp  cli.hpp  config.hpp  discovery.hpp  installer.hpp  isolator.hpp  platform.hpp  runner.hpp  utils.hpp  venv.hpp
runtime/: adiboupk_loader.py  adiboupk_run.py
src/: auditor.cpp  cli.cpp  config.cpp  discovery.cpp  installer.cpp  isolator.cpp  main.cpp  platform_common.cpp  platform_linux.cpp  platform_windows.cpp  runner.cpp  utils.cpp  venv.cpp
tests/: test_auditor.cpp  test_config.cpp  test_discovery.cpp  test_platform.cpp  test_runner.cpp  test_utils.cpp
wrappers/: adiboupk-python.ps1  adiboupk-python.sh
